--- a/index.html
+++ b/index.html
@@ -35,8 +35,18 @@
             <div class="dashboard">
                 <h2>🔥 Lo Más Vendido</h2>
                 <div id="stats-container" class="stats-grid">
-                    <!-- Items will be injected here by JS -->
                     <div class="empty-state">No hay ventas registradas hoy.</div>
+                </div>
+            </div>
+
+            <!-- History / Accounts Section -->
+            <div class="history-section">
+                <h2>💰 Cuentas del Día</h2>
+                <div id="daily-summary" class="summary-card">
+                    <h3>Total Hoy: <span id="total-revenue">$0.00</span></h3>
+                    <ul id="sales-log" class="sales-list">
+                        <!-- Sales history will go here -->
+                    </ul>
                 </div>
             </div>
 
@@ -46,6 +56,7 @@
         </main>
     </div>
 
+    <script src="https://unpkg.com/dexie/dist/dexie.js"></script>
     <script src="./java/inventory.js"></script>
     <script>
         // Register PWA Service Worker
