Change title from 'AI Inventory Manager' to 'Inventario Monarca'

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="app-container">
         <header>
-            <h1>📦 Inventario IA</h1>
+            <h1>Inventario Monarca</h1>
             <p class="subtitle">Dímelo y yo lo anoto</p>
         </header>
 
@@ -69,5 +69,6 @@
         }
     </script>
 </body>
+
 
 </html>
