--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventario de Ventas</title>
+    <title>Inventario de Ventas </title>
     <link rel="stylesheet" href="./css/inventory.css">
     <link rel="manifest" href="manifest.json">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 
     <div class="app-container">
         <header>
-            <h1>Inventario Monarca</h1>
+            <h1>Inventario de Ventas Monarca</h1>
             <p class="subtitle">Dímelo y yo lo anoto</p>
         </header>
 
@@ -70,6 +70,4 @@
     </script>
 </body>
 
-
 </html>
-
