--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
                 <div class="input-container">
                     <input type="text" id="venta-input" placeholder="Ej: 'Vendí 2 sudaderas'...">
                     <button id="btn-voz" class="mic-icon" aria-label="Activar voz">
-                        🎤
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"></path>
+                            <path d="M19 10v2a7 7 0 0 1-14 0v-2"></path>
+                            <line x1="12" y1="19" x2="12" y2="23"></line>
+                            <line x1="8" y1="23" x2="16" y2="23"></line>
+                        </svg>
                     </button>
                     <button id="btn-enviar">Anotar</button>
                 </div>
@@ -33,7 +39,7 @@
 
             <!-- Dashboard Section -->
             <div class="dashboard">
-                <h2>🔥 Lo Más Vendido</h2>
+                <h2>Lo Más Vendido</h2>
                 <div id="stats-container" class="stats-grid">
                     <div class="empty-state">No hay ventas registradas hoy.</div>
                 </div>
@@ -41,7 +47,7 @@
 
             <!-- History / Accounts Section -->
             <div class="history-section">
-                <h2>💰 Cuentas del Día</h2>
+                <h2>Cuentas del Día</h2>
                 <div id="daily-summary" class="summary-card">
                     <h3>Total Hoy: <span id="total-revenue">$0.00</span></h3>
                     <ul id="sales-log" class="sales-list">
@@ -51,7 +57,7 @@
             </div>
 
             <div class="actions">
-                <button id="btn-reset" class="btn-secondary">🗑️ Borrar Todo</button>
+                <button id="btn-reset" class="btn-secondary">Borrar Todo</button>
             </div>
         </main>
     </div>
